added communication material

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -491,6 +491,11 @@
   keywords = {Assistive Technology,Group Home,Survey Participant,Unfair Advantage,Wheelchair User}
 }
 
+@misc{DefiningInteractionModel,
+  title = {Defining an {{Interaction Model}}: {{The Cornerstone}} of {{Application Design}} :: {{UXmatters}}},
+  howpublished = {https://www.uxmatters.com/mt/archives/2012/01/defining-an-interaction-model-the-cornerstone-of-application-design.php}
+}
+
 @article{demleitnerPosthumanismusRosiBraido,
   title = {Posthumanismus - {{Rosi Braido}}},
   author = {Demleitner, Adrian},
@@ -646,7 +651,7 @@
 @article{forlanoPosthumanismDesign21,
   title = {Posthumanism and {{Design}}},
   author = {Forlano, Laura},
-  year = {21},
+  year = 2017,
   journal = {She Ji: The Journal of Design, Economics, and Innovation},
   volume = {3},
   number = {1},
@@ -661,7 +666,7 @@
 @article{forlanoPosthumanismDesign21a,
   title = {Posthumanism and {{Design}}},
   author = {Forlano, Laura},
-  year = {21},
+  year = 2017,
   journal = {She Ji: The Journal of Design, Economics, and Innovation},
   volume = {3},
   number = {1},
@@ -945,6 +950,11 @@
   abstract = {The aim of this study was to better understand student assumptions related to the challenges of developing a universally designed device compared to designing a dedicated assistive device. Two projects were conducted in a sophomore industrial \ldots},
   howpublished = {https://www.springerprofessional.de/en/introducing-assistive-technology-and-universal-design-theory-app/15475402},
   langid = {english}
+}
+
+@misc{IntroductionHCI,
+  title = {Introduction to {{HCI}}},
+  howpublished = {https://www.cs.bham.ac.uk/\textasciitilde rxb/Teaching/HCI\%20II/intro.html}
 }
 
 @article{kbarAssistiveTechnologiesHearing2017,
@@ -1342,6 +1352,20 @@
   langid = {english},
   keywords = {Computer Science - Machine Learning},
   file = {/Users/adriandemleitner/Zotero/storage/YWFGAQFD/Mehrabi et al. - 2019 - A Survey on Bias and Fairness in Machine Learning.pdf}
+}
+
+@book{MentalModelsHumanComputer1987,
+  title = {Mental {{Models}} in {{Human-Computer Interaction}}: {{Research Issues About What}} the {{User}} of {{Software Knows}}},
+  shorttitle = {Mental {{Models}} in {{Human-Computer Interaction}}},
+  year = {1987},
+  month = jan,
+  pages = {790},
+  publisher = {{National Academies Press}},
+  address = {{Washington, D.C.}},
+  doi = {10.17226/790},
+  isbn = {978-0-309-07801-6},
+  langid = {english},
+  file = {/Users/adriandemleitner/Zotero/storage/67TCBG83/1987 - Mental Models in Human-Computer Interaction Resea.pdf}
 }
 
 @misc{merrettPotentialVoiceInterfaces2018,
@@ -1942,6 +1966,25 @@
   pmcid = {PMC8636846},
   pmid = {34866955},
   file = {/Users/adriandemleitner/Zotero/storage/RY2VV67R/Senjam et al. - 2021 - Smartphones-Based Assistive Technology Accessibil.pdf}
+}
+
+@article{seymourExploringInteractionsTrust2021,
+  title = {Exploring {{Interactions Between Trust}}, {{Anthropomorphism}}, and {{Relationship Development}} in {{Voice Assistants}}},
+  author = {Seymour, William and Van Kleek, Max},
+  year = {2021},
+  month = oct,
+  journal = {Proc. ACM Hum.-Comput. Interact.},
+  volume = {5},
+  number = {CSCW2},
+  eprint = {2108.01923},
+  eprinttype = {arxiv},
+  pages = {1--16},
+  issn = {2573-0142},
+  doi = {10.1145/3479515},
+  abstract = {Modern conversational agents such as Alexa and Google Assistant represent significant progress in speech recognition, natural language processing, and speech synthesis. But as these agents have grown more realistic, concerns have been raised over how their social nature might unconsciously shape our interactions with them. Through a survey of 500 voice assistant users, we explore whether users' relationships with their voice assistants can be quantified using the same metrics as social, interpersonal relationships; as well as if this correlates with how much they trust their devices and the extent to which they anthropomorphise them. Using Knapp's staircase model of human relationships, we find that not only can human-device interactions be modelled in this way, but also that relationship development with voice assistants correlates with increased trust and anthropomorphism.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Human-Computer Interaction},
+  file = {/Users/adriandemleitner/Zotero/storage/RVMUBA4X/Seymour and Van Kleek - 2021 - Exploring Interactions Between Trust, Anthropomorp.pdf}
 }
 
 @article{sezginScopingReviewPatientfacing2020,
